--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bun-react-template",
-  "version": "0.1.0",
-  "private": true,
+  "name": "about_me",
+  "version": "1.0.0",
+  "private": false,
   "type": "module",
   "main": "src/index.tsx",
   "module": "src/index.tsx",
